--- a/ch5/ch5-logisticRegression.ipynb
+++ b/ch5/ch5-logisticRegression.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,11 @@
     "    参数：训练集，标签集\n",
     "    return： weights\n",
     "    \"\"\"\n",
+    "    # w_0*x_0+w_1*x_1+w_2*x_2+...\n",
+    "    # 填充x1=1,则w_0等价于截距b\n",
+    "    for i in range(len(traindataArr)):\n",
+    "        traindataArr[i].append(1)\n",
+    "    \n",
     "    # 转为数组类型，方便计算\n",
     "    traindataArr=np.array(traindataArr)\n",
     "    trainlabelArr=np.array(trainlabelArr)\n",
@@ -106,20 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 4.12414349],\n",
-       "       [ 0.48007329],\n",
-       "       [-0.6168482 ]])"
+       "array([[ 2.78765865],\n",
+       "       [ 0.58073184],\n",
+       "       [-0.79961773],\n",
+       "       [ 2.78765865]])"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 13
     }
    ],
    "source": [
@@ -180,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +196,9 @@
     "    参数：训练集，标签集\n",
     "    return： weights\n",
     "    \"\"\"\n",
+    "    # 填充x1=1,则w_0等价于截距b\n",
+    "    for i in range(len(traindataArr)):\n",
+    "        traindataArr[i].append(1)\n",
     "    # 转为数组类型，方便计算\n",
     "    traindataArr=np.array(traindataArr)\n",
     "    trainlabelArr=np.array(trainlabelArr)\n",
@@ -223,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -232,13 +241,14 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[15.96382299],\n",
-       "       [ 1.28557166],\n",
-       "       [-2.22581784]])"
+       "array([[ 9.98925941],\n",
+       "       [ 1.52852944],\n",
+       "       [-2.76149001],\n",
+       "       [ 9.98925941]])"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 15
     }
    ],
    "source": [
@@ -257,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,12 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modelTest(testDataArr,testLabelArr,w):\n",
     "    # return accur\n",
+    "    # 填充一列，值为1\n",
+    "    for i in range(len(testDataArr)):\n",
+    "        testDataArr[i].append(1)\n",
+    "    # 错误个数\n",
     "    errCnt=0\n",
     "    for i in range(len(testDataArr)):\n",
     "        if testLabelArr[i]!=predict(w,testDataArr[i]):\n",
@@ -319,34 +333,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.6268656716417911"
+       "0.7014925373134329"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 19
     }
    ],
    "source": [
     "trainData, trainLabel = loadData(\"./horseColicTraining.txt\")\n",
     "testData,testLabel=loadData(\"./horseColicTest.txt\")\n",
     "# 随机梯度下降\n",
-    "w=randGradAscent(trainData,trainLabel)\n",
+    "# w=randGradAscent(trainData,trainLabel)\n",
     "# 梯度下降\n",
-    "# w=gradAscent(trainData,trainLabel)\n",
+    "w=gradAscent(trainData,trainLabel)\n",
     "accu=modelTest(testData,testLabel,w)\n",
     "accu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +371,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 20
     }
    ],
    "source": [
